--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,1 +1,21 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Resonance Demo</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <div class="container">
+    <h1>Resonance</h1>
+    <p>Analyze chat interactions for tone, empathy, and balance.</p>
 
+    <textarea id="chatInput" placeholder="Paste chat JSON here..."></textarea>
+    <button onclick="analyze()">Analyze</button>
+
+    <pre id="output"></pre>
+  </div>
+
+  <script src="app.js"></script>
+</body>
+</html>
